--- a/css/about.css
+++ b/css/about.css
@@ -1,7 +1,7 @@
 
         @import url('https://fonts.googleapis.com/css?family=Montserrat');
         .titulli {
-            font-family: "Montserrat";
+            font-family: "times";
             text-align: center;
             color: #FFF;
             display: flex;
